# poro

./: .gitignore  Cargo.toml  README.md  double_check.py  embedding.json  gpt2.py  gpt_check.py  key.json  key_bias.json  linear_check.py  query.json  query_bias.json  rust_checkfile.txt  value.json  value_bias.json
data/batchnorm/: C.json  W1.json  W2.json  b2.json  bnbias.json  bngain.json
data/bigram/: names.txt  tensor_C.json  tensor_W1.json  tensor_W2.json  tensor_b1.json  tensor_b2.json  weight_file.json
examples/: 1_tensor_basics.rs  2_autograd_backprop.rs  3_modules_and_models.rs  handrolled_neural_network.rs  linear_and_adam_optimizer.rs  mlp.rs  transfomer_test.rs  wavenet.rs
src/: lib.rs
src/central/: add_op.rs  equation.rs  grad_control.rs  indexable.rs  internal_tensor.rs  matmul_op.rs  mod.rs  model.rs  module.rs  mul_op.rs  operation.rs  shape.rs  tensor.rs  view.rs
src/nn/: mod.rs
src/nn/layers/: attention.rs  batch_norm.rs  casual_self_attention.rs  dropout.rs  embedding.rs  layer_norm.rs  linear.rs  mlp.rs  mod.rs  module.rs  tanh.rs
src/nn/model/: mod.rs  model.rs  transfomer.rs
src/optimizers/: adam.rs  adamw.rs  mod.rs  optimizer.rs
