[package]
name = "poro"
version = "0.1.1"
edition = "2021"
authors = ["tucker morgan tucker.bull.morgan@gmail.com"]
description = "A simple toy neural network library"
license = "MIT"
repository = "https://github.com/tuckerbmorgan/hermes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
ndarray = { version =  "0.15.6", features = ["rayon"]}
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0.201"
serde_json = "1.0.117"
cudarc = { version="0.11.1", features = [
    "f16",
    "cuda-version-from-build-system",
]}
